--- a/comment.html
+++ b/comment.html
@@ -195,16 +195,16 @@
                     <span>97<i>%</i></span>
                 </div>
                 <ul>
-                    <li>电饭煲不错(2305)</li>
-                    <li>外观漂亮(1525)</li>
-                    <li>内胆不错(1305)</li>
-                    <li>煮饭速度快(977)</li>
-                    <li>煮的饭很香(2134)</li>
-                    <li>一般(125)</li>
-                    <li>功能多(957)</li>
-                    <li>使用方便(1368)</li>
-                    <li>预约功能(778)</li>
-                    <li>还可以吧(362)</li>
+                    <li><a href="javascript:void(0)">电饭煲不错(2305)</a></li>
+                    <li><a href="javascript:void(0)">外观漂亮(1525)</a></li>
+                    <li><a href="javascript:void(0)">内胆不错(1305)</a></li>
+                    <li><a href="javascript:void(0)">煮饭速度快(977)</a></li>
+                    <li><a href="javascript:void(0)">煮的饭很香(2134)</a></li>
+                    <li><a href="javascript:void(0)">一般(125)</a></li>
+                    <li><a href="javascript:void(0)">功能多(957)</a></li>
+                    <li><a href="javascript:void(0)">使用方便(1368)</a></li>
+                    <li><a href="javascript:void(0)">预约功能(778)</a></li>
+                    <li><a href="javascript:void(0)">还可以吧(362)</a></li>
                 </ul>
             </div>
             <div id="edit_com" class="edit_com">
