--- a/confirm_order.html
+++ b/confirm_order.html
@@ -189,7 +189,7 @@
                 <div class="site_info">
                     <div>
                         <h3>收货人信息</h3>
-                        <a href="javascript:void(0)" class="add_site">新增收货地址</a>
+                        <a href="address.html" class="add_site">新增收货地址</a>
                     </div>
                     <ul class="site_list">
                         <li class="active">
@@ -197,7 +197,7 @@
                             <span class="name">罗小迪</span>
                             <span class="site">湖北省武汉市洪山区关山鲁磨路联峰广场1201多迪</span>
                             <span class="tel">188*****783</span>
-                            <span class="edit">编辑</span>
+                            <span class="edit"><a href="address.html">编辑</a></span>
                             <span class="default">设为默认地址</span>
                         </li>
                         <li>
@@ -205,7 +205,7 @@
                             <span class="name">李思哲</span>
                             <span class="site">湖北省武汉市洪山区关山鲁磨路联峰广场1202多迪</span>
                             <span class="tel">133*****773</span>
-                            <span class="edit">编辑</span>
+                            <span class="edit"><a href="address.html">编辑</a></span>
                             <span class="default">设为默认地址</span>
                         </li>
                         <li>
@@ -213,7 +213,7 @@
                             <span class="name">罗大迪</span>
                             <span class="site">湖北省武汉市洪山区关山鲁磨路联峰广场1203多迪</span>
                             <span class="tel">188*****783</span>
-                            <span class="edit">编辑</span>
+                            <span class="edit"><a href="address.html">编辑</a></span>
                             <span class="default">设为默认地址</span>
                         </li>
                         <li>
@@ -221,7 +221,7 @@
                             <span class="name">张三李</span>
                             <span class="site">湖北省武汉市洪山区关山鲁磨路联峰广场1204多迪</span>
                             <span class="tel">134*****853</span>
-                            <span class="edit">编辑</span>
+                            <span class="edit"><a href="address.html">编辑</a></span>
                             <span class="default">设为默认地址</span>
                         </li>
                     </ul>
