--- a/order.html
+++ b/order.html
@@ -243,7 +243,7 @@
                                 <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
-                                <a href="javascript:void(0)" class="com">追加评价</a>
+                                <a href="comment.html" class="com">追加评价</a>
                                 <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                                 <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
-                                <a href="javascript:void(0)" class="com">追加评价</a>
+                                <a href="comment.html" class="com">追加评价</a>
                                 <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                                 <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
-                                <a href="javascript:void(0)" class="com">追加评价</a>
+                                <a href="comment.html" class="com">追加评价</a>
                                 <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
@@ -354,7 +354,7 @@
                                 <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
-                                <a href="javascript:void(0)" class="com">追加评价</a>
+                                <a href="comment.html" class="com">追加评价</a>
                                 <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
@@ -391,7 +391,7 @@
                                 <a href="order_details.html" class="ad">查看物流</a>
                             </div>
                             <div class="handle">
-                                <a href="javascript:void(0)" class="com">追加评价</a>
+                                <a href="comment.html" class="com">追加评价</a>
                                 <a href="confirm_order.html" class="buy">再次购买</a>
                             </div>
                         </div>
