--- a/pay.html
+++ b/pay.html
@@ -195,7 +195,7 @@
                     <li class="active">
                         <div class="checkbox">
                             <span class="checked"></span>
-                            <input type="checkbox" checked>
+                            <input type="radio" name="pay" value="0"  checked='checked'>
                         </div>
                         <span class="bank_name"><img src="images/js_icon.png" alt="">建设银行</span>
                         <span class="card">储蓄卡（4665）</span>
@@ -211,7 +211,7 @@
                     <li>
                         <div class="checkbox">
                             <span></span>
-                            <input type="checkbox">
+                            <input type="radio" name="pay" value="1">
                         </div>
                         <span class="bank_name"><img src="images/zs_icon.png" alt="">招商银行</span>
                         <span class="card">信用卡（6900）</span>
@@ -226,7 +226,7 @@
                     <li>
                         <div class="checkbox">
                             <span></span>
-                            <input type="checkbox">
+                            <input type="radio" name="pay" value="2">
                         </div>
                         <span class="bank_name"><img src="images/js_icon.png" alt="">建设银行</span>
                         <span class="card">储蓄卡（4665）</span>
