--- a/pro_details.html
+++ b/pro_details.html
@@ -253,7 +253,7 @@
                             <input type="text" id="min" />
                             <label for="max">到</label>
                             <input type="text" id="max" />
-                            <a href="#">搜索</a>
+                            <input type="submit" value="搜索"/> 
                         </form>
                     </div>
                     <div class="custom_service">
@@ -295,16 +295,16 @@
                             <span>97<i>%</i></span>
                         </div>
                         <ul>
-                            <li>电饭煲不错(2305)</li>
-                            <li>外观漂亮(1525)</li>
-                            <li>内胆不错(1305)</li>
-                            <li>煮饭速度快(977)</li>
-                            <li>煮的饭很香(2134)</li>
-                            <li>一般(125)</li>
-                            <li>功能多(957)</li>
-                            <li>使用方便(1368)</li>
-                            <li>预约功能(778)</li>
-                            <li>还可以吧(362)</li>
+                            <li><a href="javascript:void(0)">电饭煲不错(2305)</a></li>
+                            <li><a href="javascript:void(0)">外观漂亮(1525)</a></li>
+                            <li><a href="javascript:void(0)">内胆不错(1305)</a></li>
+                            <li><a href="javascript:void(0)">煮饭速度快(977)</a></li>
+                            <li><a href="javascript:void(0)">煮的饭很香(2134)</a></li>
+                            <li><a href="javascript:void(0)">一般(125)</a></li>
+                            <li><a href="javascript:void(0)">功能多(957)</a></li>
+                            <li><a href="javascript:void(0)">使用方便(1368)</a></li>
+                            <li><a href="javascript:void(0)">预约功能(778)</a></li>
+                            <li><a href="javascript:void(0)">还可以吧(362)</a></li>
                         </ul>
                     </div>
                     <ul class="sort">
@@ -314,14 +314,19 @@
                         <li><a href="#">好评(1.1万+)</a></li>
                         <li><a href="#">中评(300+)</a></li>
                         <li><a href="#">差评(200+)</a></li>
-                        <li><a href="javascript:void(0)">推荐排序 <img src="images/arrows_icon3.png" alt=""></a></li>
+                        <li>
+                            <a href="javascript:void(0)">推荐排序 <img src="images/arrows_icon3.png" alt=""></a>
+                            <ul>
+                                <li>时间排序</li>
+                                <li>内容排序</li>
+                            </ul>
+                        </li>
                     </ul>
                     <ul class="estimate">
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
-                                    <img src="images/head_icon1.png" alt=""><span><span>大***L</span></span>
-                                </a>
+                                <img src="images/head_icon1.png" alt="">
+                                <span>大***L</span>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -342,9 +347,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon2.png" alt=""><span>在***6</span>
-                                </a>
                                 <p>银牌会员</p>
                             </div>
                             <div class="estimate_main">
@@ -369,9 +372,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon1.png" alt=""> <span>大***L</span>
-                                </a>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -392,9 +393,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon2.png" alt=""><span>在***6</span>
-                                </a>
                                 <p>银牌会员</p>
                             </div>
                             <div class="estimate_main">
@@ -415,9 +414,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon1.png" alt=""> <span>大***L</span>
-                                </a>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -438,9 +435,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon2.png" alt=""> <span>在***6</span>
-                                </a>
                                 <p>银牌会员</p>
                             </div>
                             <div class="estimate_main">
@@ -465,9 +460,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon1.png" alt=""> <span>大***L</span>
-                                </a>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -488,9 +481,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon2.png" alt=""> <span>在***6</span>
-                                </a>
                                 <p>银牌会员</p>
                             </div>
                             <div class="estimate_main">
@@ -511,9 +502,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon1.png" alt=""> <span>大***L</span>
-                                </a>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -534,9 +523,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon1.png" alt=""> <span>大***L</span>
-                                </a>
                                 <p>钻石会员</p>
                             </div>
                             <div class="estimate_main">
@@ -557,9 +544,7 @@
                         </li>
                         <li>
                             <div class="user_info">
-                                <a href="user.html">
                                     <img src="images/head_icon2.png" alt=""> <span>在***6</span>
-                                </a>
                                 <p>银牌会员</p>
                             </div>
                             <div class="estimate_main">
