--- a/shop_list.html
+++ b/shop_list.html
@@ -172,16 +172,16 @@
                     <h2>厨房小电</h2>
                     <ul>
                         <li class="active">
-                            电饭煲
+                            <a href="javascript:void(0)">电饭煲</a>
                         </li>
                         <li>
-                            电磁炉
+                            <a href="javascript:void(0)">电磁炉</a>
                         </li>
                         <li>
-                            电压力锅
+                            <a href="javascript:void(0)">电压力锅</a>
                         </li>
                         <li>
-                            电火锅
+                            <a href="javascript:void(0)">电火锅</a>
                         </li>
                     </ul>
                 </div>
@@ -361,10 +361,10 @@
                 <div class="sort">
                     <h5>排列方式：</h5>
                     <ul>
-                        <li class="active">默认</li>
-                        <li>销量</li>
-                        <li>人所</li>
-                        <li>价格</li>
+                        <li class="active"><a href="javascript:void(0)">默认</a></li>
+                        <li><a href="javascript:void(0)">销量</a></li>
+                        <li><a href="javascript:void(0)">人所</a></li>
+                        <li><a href="javascript:void(0)">价格</a></li>
                     </ul>
                 </div>
                 <ul class="pro_list">
