--- a/user.html
+++ b/user.html
@@ -176,10 +176,10 @@
                     <li>
                         <h3><a href="order.html">订单中心</a></h3>
                         <ul>
-                            <li><a href="address.html">全部订单</a></li>
-                            <li><a href="address.html">已完成</a></li>
-                            <li><a href="address.html">待付款</a></li>
-                            <li><a href="address.html">待收货</a></li>
+                            <li><a href="order.html">全部订单</a></li>
+                            <li><a href="order.html">已完成</a></li>
+                            <li><a href="order.html">待付款</a></li>
+                            <li><a href="order.html">待收货</a></li>
                         </ul>
                     </li>
                 </ul>
