--- a/shop_cart.html
+++ b/shop_cart.html
@@ -27,12 +27,12 @@
                     <li><a href="order.html">我的订单</a></li>
                     <li><a href="user.html">我的文的</a></li>
                     <li>|</li>
-                    <li><a href="shop_cart.html">购物车</a><sup></sup></li>
+                    <li><a href="shop_cart.html">购物车</a><sup>0</sup></li>
                     <li>|</li>
                     <li>
-                        <a href="user.html"><img src="images/favorite_icon.png" alt="">收藏夹</a>
+                        <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
                     </li>
-                    <li><a href="user.html">服务中心</a></li>
+                    <li><a href="javascript:void(0)">服务中心</a></li>
                 </ul>
             </div>
         </div>
@@ -254,41 +254,41 @@
         <div class="footer_main">
             <dl>
                 <dt>购物指南</dt>
-                <dd><a href="user.html">购物需知</a></dd>
-                <dd><a href="user.html">交易条款</a></dd>
-                <dd><a href="user.html">购物流程</a></dd>
+                <dd><a href="javascript:void(0)">购物需知</a></dd>
+                <dd><a href="javascript:void(0)">交易条款</a></dd>
+                <dd><a href="javascript:void(0)">购物流程</a></dd>
             </dl>
             <dl>
                 <dt>支付方式</dt>
-                <dd><a href="user.html">银行卡支付</a></dd>
-                <dd><a href="user.html">支付宝支付</a></dd>
-                <dd><a href="user.html">微信支付</a></dd>
-                <dd><a href="user.html">快捷支付</a></dd>
+                <dd><a href="javascript:void(0)">银行卡支付</a></dd>
+                <dd><a href="javascript:void(0)">支付宝支付</a></dd>
+                <dd><a href="javascript:void(0)">微信支付</a></dd>
+                <dd><a href="javascript:void(0)">快捷支付</a></dd>
             </dl>
             <dl>
                 <dt>客户服务</dt>
-                <dd><a href="user.html">服务中心</a></dd>
-                <dd><a href="user.html">24小时服务</a></dd>
-                <dd><a href="user.html">联系客服</a></dd>
+                <dd><a href="javascript:void(0)">服务中心</a></dd>
+                <dd><a href="javascript:void(0)">24小时服务</a></dd>
+                <dd><a href="javascript:void(0)">联系客服</a></dd>
             </dl>
             <dl>
                 <dt>关于我们</dt>
-                <dd><a href="user.html">平价介绍</a></dd>
-                <dd><a href="user.html">招商加盟</a></dd>
-                <dd><a href="user.html">申请加入</a></dd>
-                <dd><a href="user.html">联系我们</a></dd>
-                <dd><a href="user.html">新闻中心</a></dd>
+                <dd><a href="javascript:void(0)">平价介绍</a></dd>
+                <dd><a href="javascript:void(0)">招商加盟</a></dd>
+                <dd><a href="javascript:void(0)">申请加入</a></dd>
+                <dd><a href="javascript:void(0)">联系我们</a></dd>
+                <dd><a href="javascript:void(0)">新闻中心</a></dd>
             </dl>
             <dl>
                 <dt>常见问题</dt>
-                <dd><a href="user.html">下单后可以修改订单吗？</a></dd>
-                <dd><a href="user.html">订单如保取消</a></dd>
-                <dd><a href="user.html">出货后几可以到货</a></dd>
+                <dd><a href="javascript:void(0)">下单后可以修改订单吗？</a></dd>
+                <dd><a href="javascript:void(0)">订单如保取消</a></dd>
+                <dd><a href="javascript:void(0)">出货后几可以到货</a></dd>
             </dl>
             <div>
                 <span class="tel">400-876-0703</span>
                 <small>周一到周五：9:00-18:00</small>
-                <a href="user.html">
+                <a href="javascript:void(0)">
                     <img src="images/msg_icon.png" alt=""> 24小时客服热线
                 </a>
             </div>
