--- a/shop_list.html
+++ b/shop_list.html
@@ -30,9 +30,9 @@
                     <li><a href="shop_cart.html">购物车</a><sup>0</sup></li>
                     <li>|</li>
                     <li>
-                        <a href="user.html"><img src="images/favorite_icon.png" alt="">收藏夹</a>
+                        <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
                     </li>
-                    <li><a href="user.html">服务中心</a></li>
+                    <li><a href="javascript:void(0)">服务中心</a></li>
                 </ul>
             </div>
         </div>
@@ -240,25 +240,25 @@
                         <div class="option">
                             <h5>品牌：</h5>
                             <ul>
-                                <li class="active">全部</li>
-                                <li>苏泊尔（SUPOR）</li>
-                                <li>美的（Midea）</li>
-                                <li>松下（Panasonic）</li>
-                                <li>飞利浦（PHILIPS）</li>
-                                <li>九阳（Joyoung）</li>
+                                <li class="active"><a href="javascript:void(0)">全部</a></li>
+                                <li><a href="javascript:void(0)">苏泊尔（SUPOR）</a></li>
+                                <li><a href="javascript:void(0)">美的（Midea）</a></li>
+                                <li><a href="javascript:void(0)">松下（Panasonic）</a></li>
+                                <li><a href="javascript:void(0)">飞利浦（PHILIPS）</a></li>
+                                <li><a href="javascript:void(0)">九阳（Joyoung）</a></li>
                             </ul>
                         </div>
                         <div class="option">
                             <h5>价格：</h5>
                             <ul>
-                                <li class="active">全部</li>
-                                <li>0-299</li>
-                                <li>300-699</li>
-                                <li>700-1599</li>
-                                <li>1600-2999</li>
-                                <li>3000-4499</li>
-                                <li>4500-6999</li>
-                                <li>7000-39999</li>
+                                <li class="active"><a href="javascript:void(0)">全部</a></li>
+                                <li><a href="javascript:void(0)">0-299</a></li>
+                                <li><a href="javascript:void(0)">300-699</a></li>
+                                <li><a href="javascript:void(0)">700-1599</a></li>
+                                <li><a href="javascript:void(0)">1600-2999</a></li>
+                                <li><a href="javascript:void(0)">3000-4499</a></li>
+                                <li><a href="javascript:void(0)">4500-6999</a></li>
+                                <li><a href="javascript:void(0)">7000-39999</a></li>
                             </ul>
                             <div class="price_range">
                                 <input id="priceMin" title='最低价' maxlength='6' />
@@ -670,41 +670,41 @@
         <div class="footer_main">
             <dl>
                 <dt>购物指南</dt>
-                <dd><a href="user.html">购物需知</a></dd>
-                <dd><a href="user.html">交易条款</a></dd>
-                <dd><a href="user.html">购物流程</a></dd>
+                <dd><a href="javascript:void(0)">购物需知</a></dd>
+                <dd><a href="javascript:void(0)">交易条款</a></dd>
+                <dd><a href="javascript:void(0)">购物流程</a></dd>
             </dl>
             <dl>
                 <dt>支付方式</dt>
-                <dd><a href="user.html">银行卡支付</a></dd>
-                <dd><a href="user.html">支付宝支付</a></dd>
-                <dd><a href="user.html">微信支付</a></dd>
-                <dd><a href="user.html">快捷支付</a></dd>
+                <dd><a href="javascript:void(0)">银行卡支付</a></dd>
+                <dd><a href="javascript:void(0)">支付宝支付</a></dd>
+                <dd><a href="javascript:void(0)">微信支付</a></dd>
+                <dd><a href="javascript:void(0)">快捷支付</a></dd>
             </dl>
             <dl>
                 <dt>客户服务</dt>
-                <dd><a href="user.html">服务中心</a></dd>
-                <dd><a href="user.html">24小时服务</a></dd>
-                <dd><a href="user.html">联系客服</a></dd>
+                <dd><a href="javascript:void(0)">服务中心</a></dd>
+                <dd><a href="javascript:void(0)">24小时服务</a></dd>
+                <dd><a href="javascript:void(0)">联系客服</a></dd>
             </dl>
             <dl>
                 <dt>关于我们</dt>
-                <dd><a href="user.html">平价介绍</a></dd>
-                <dd><a href="user.html">招商加盟</a></dd>
-                <dd><a href="user.html">申请加入</a></dd>
-                <dd><a href="user.html">联系我们</a></dd>
-                <dd><a href="user.html">新闻中心</a></dd>
+                <dd><a href="javascript:void(0)">平价介绍</a></dd>
+                <dd><a href="javascript:void(0)">招商加盟</a></dd>
+                <dd><a href="javascript:void(0)">申请加入</a></dd>
+                <dd><a href="javascript:void(0)">联系我们</a></dd>
+                <dd><a href="javascript:void(0)">新闻中心</a></dd>
             </dl>
             <dl>
                 <dt>常见问题</dt>
-                <dd><a href="user.html">下单后可以修改订单吗？</a></dd>
-                <dd><a href="user.html">订单如保取消</a></dd>
-                <dd><a href="user.html">出货后几可以到货</a></dd>
+                <dd><a href="javascript:void(0)">下单后可以修改订单吗？</a></dd>
+                <dd><a href="javascript:void(0)">订单如保取消</a></dd>
+                <dd><a href="javascript:void(0)">出货后几可以到货</a></dd>
             </dl>
             <div>
                 <span class="tel">400-876-0703</span>
                 <small>周一到周五：9:00-18:00</small>
-                <a href="user.html">
+                <a href="javascript:void(0)">
                     <img src="images/msg_icon.png" alt=""> 24小时客服热线
                 </a>
             </div>
