--- a/address.html
+++ b/address.html
@@ -15,8 +15,7 @@
         <div class="top">
             <div class="containe">
                 <div class="left">
-                    <a href="index.html"><img src="images/home_icon.png" alt="">文的首页</a>
-                    |
+                    <a href="index.html"><img src="images/home_icon.png" alt="">文的首页</a> |
                     <span class="loginzt">
                         <a href="login.html">登录</a>
                         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -226,33 +225,37 @@
                         <button type="submit">保存收货地址</button>
                     </form>
                 </div>
-                <div class="addrs">
-                    <h4>罗小迪 <span>湖北</span></h4>
-                    <ul>
-                        <li>收货人：<span>董小迎</span></li>
-                        <li>所在地区：<span>湖北武汉市武昌区中南路街道</span></li>
-                        <li>地址：<span>虎泉街工程大学</span></li>
-                        <li>手机：<span>188****7783</span></li>
-                        <li>固定电话：<span></span></li>
-                        <li>电子邮箱：<span></span></li>
-                    </ul>
-                    <button><img src="images/close_icon.png" /></button>
-                    <span class="edit">编辑</span>
-                </div>
-                <div class="addrs">
-                    <h4>罗小迪 <span>湖北</span></h4>
-                    <ul>
-                        <li>收货人：<span>董小迎</span></li>
-                        <li>所在地区：<span>湖北武汉市武昌区中南路街道</span></li>
-                        <li>地址：<span>虎泉街工程大学</span></li>
-                        <li>手机：<span>188****7783</span></li>
-                        <li>固定电话：<span></span></li>
-                        <li>电子邮箱：<span></span></li>
-                    </ul>
-                    <button><img src="images/close_icon.png" /></button>
-                    <span class="edit">编辑</span>
-                    <span class="default">设为默认</span>
-                </div>
+                <ul class="addrs">
+                    <li class="default">
+                        <h4>罗小迪 <span>湖北</span></h4>
+                        <ul>
+                            <li>收货人：<span>董小迎</span></li>
+                            <li>所在地区：<span>湖北武汉市武昌区中南路街道</span></li>
+                            <li>地址：<span>虎泉街工程大学</span></li>
+                            <li>手机：<span>188****7783</span></li>
+                            <li>固定电话：<span></span></li>
+                            <li>电子邮箱：<span></span></li>
+                        </ul>
+                        <button><img src="images/close_icon.png" /></button>
+                        <span class="edit">编辑</span>
+                        <span class="default">设为默认</span>
+                    </li>
+                    <li>
+                        <h4>罗小迪 <span>湖北</span></h4>
+                        <ul>
+                            <li>收货人：<span>董小迎</span></li>
+                            <li>所在地区：<span>湖北武汉市武昌区中南路街道</span></li>
+                            <li>地址：<span>虎泉街工程大学</span></li>
+                            <li>手机：<span>188****7783</span></li>
+                            <li>固定电话：<span></span></li>
+                            <li>电子邮箱：<span></span></li>
+                        </ul>
+                        <button><img src="images/close_icon.png" /></button>
+                        <span class="edit">编辑</span>
+                        <span class="default">设为默认</span>
+                    </li>
+                </ul>
+
                 <div class="add_button">
                     <a href="#add_addr">新增收货地址</a>
                     <span>您已创建<span>2</span>个收货地址，最多可创建20个</span>
