减少前端功能

--- a/pro_details.html
+++ b/pro_details.html
@@ -199,7 +199,7 @@
                         <p><small>促销价</small><span><em>￥</em>299.00</span></p>
                     </div>
                     <ul>
-                        <li>月销量：<span>325</span></li>
+                        <!-- <li>月销量：<span>325</span></li> -->
                         <li>累计销量：<span>25263</span></li>
                         <li>累计评价：<span>18920</span></li>
                         <li>文的积分：<span>20</span></li>
