--- a/shop_list.html
+++ b/shop_list.html
@@ -232,10 +232,9 @@
                 </div>
             </div>
             <div class="main">
-                <div class="options">
+                <!-- <div class="options">
                     <div>
                         <h3>电饭煲</h3>
-                        <!--js动态改变.bg的高度-->
                         <span class="bg"></span>
                         <div class="option">
                             <h5>品牌：</h5>
@@ -357,13 +356,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="sort">
                     <h5>排列方式：</h5>
                     <ul>
                         <li class="active"><a href="javascript:void(0)">默认</a></li>
                         <li><a href="javascript:void(0)">销量</a></li>
-                        <li><a href="javascript:void(0)">人所</a></li>
+                        <!-- <li><a href="javascript:void(0)">人所</a></li> -->
                         <li><a href="javascript:void(0)">价格</a></li>
                     </ul>
                 </div>
