--- a/register.html
+++ b/register.html
@@ -85,6 +85,16 @@
                     <input type="password" id="repwd" name="repwd" value="">
                     <em class="aw_text"></em>
                 </div>
+                <div>
+                    <label for="paywd">支付密码：</label>
+                    <input type="password" id="paywd" name="paywd" value="">
+                    <em class="aw_text"></em>
+                </div>
+                <div>
+                    <label for="repaywd">确认支付密码：</label>
+                    <input type="password" id="repaywd" name="repaywd" value="">
+                    <em class="aw_text"></em>
+                </div>
                 <div class="yicon">
                     <label for="yicon">验证码：</label>
                     <input type="text" name="yicon" id="yicon" value="验证码">
