--- a/pay.html
+++ b/pay.html
@@ -197,18 +197,18 @@
                             <span class="checked"></span>
                             <input type="radio" name="pay" value="0"  checked='checked'>
                         </div>
-                        <span class="bank_name"><img src="images/js_icon.png" alt="">建设银行</span>
-                        <span class="card">储蓄卡（4665）</span>
+                        <span class="bank_name"><img src="images/js_icon.png" alt="">余额支付</span>
+                        <span class="card">余额为：4665 元</span>
                         <span class="max">单笔限额1万</span>
                         <em>优惠</em>
                         <span class="highest">随机减最高999</span>
-                        <ul class="fav_list">
+                        <!-- <ul class="fav_list">
                             <li>随机减最高999</li>
                             <li>随机减最高888</li>
                             <li>随机减最高777</li>
-                        </ul>
+                        </ul> -->
                     </li>
-                    <li>
+                    <!-- <li>
                         <div class="checkbox">
                             <span></span>
                             <input type="radio" name="pay" value="1">
@@ -238,9 +238,9 @@
                             <li>随机减最高888</li>
                             <li>随机减最高777</li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
-                <a class="add_card" href="javascript:void(0)">添加新卡/网银支付</a>
+                <!-- <a class="add_card" href="javascript:void(0)">添加新卡/网银支付</a> -->
                 <form class="paying" method="POST">
                     <label for="pay_pwd">请输入6位数字支付密码</label>
                     <div>
