--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/public.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css?v=2">
     <title>首页</title>
 </head>
 
@@ -163,17 +163,11 @@
         </div>
     </div>
     <div id="middle">
-        <div class="wrapper">
+        <div class="wrapper" id="wrapper">
             <div class="banner">
                 <ul>
-                    <li>
-                        <a href="pro_details.html"><img src="images/banner1.png" /></a>
-                    </li>
-                    <li>
-                        <a href="pro_details.html"><img src="images/banner2.png" /></a>
-                    </li>
-                    <li>
-                        <a href="pro_details.html"><img src="images/banner3.png" /></a>
+                    <li v-for="imgUrl in bannerList">
+                        <a href="pro_details.html"><img :src="imgServer+imgUrl" /></a>
                     </li>
                 </ul>
             </div>
@@ -609,8 +603,8 @@
         </div>
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/public.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/public.js?v=1"></script>
+    <script src="js/index.js?v=1"></script>
 </body>
 
 </html>
