--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         <div class="wrapper" id="wrapper">
             <div class="banner">
                 <ul>
-                    <li v-for="imgUrl in bannerList">
-                        <a href="pro_details.html"><img :src="imgServer+imgUrl" /></a>
+                    <li v-for="(item,i) in bannerList">
+                        <a :href="'pro_details.html?proId='+item.proId"><img :src="imgServer+item.imgUrl" /></a>
                     </li>
                 </ul>
             </div>
@@ -178,15 +178,15 @@
                 <li>
                     <a href="pro_details.html"><img src="images/ad_new.png" alt=""></a>
                 </li>
-                <li>
-                    <a href="pro_details.html"><img src="images/pro3.png" alt=""></a>
+                <li v-for="(pro,i) in proList">
+                    <a :href="'pro_details.html?proId='+pro.goods_id"><img src="images/pro3.png" alt=""></a>
                     <div>
-                        <h4><a href="pro_details.html">4L家用智能电饭煲3-4-5-6人</a></h4>
-                        <p class="market_price">￥ 市场价：<span>399.00</span></p>
-                        <p class="member_price">￥ 会员价：<span>299.00</span></p>
+                        <h4><a href="pro_details.html">{{pro.goods_name}}</a></h4>
+                        <p class="market_price">￥ 市场价：<span>{{pro.goods_marketPrice}}</span></p>
+                        <p class="member_price">￥ 会员价：<span>{{pro.goods_price}}</span></p>
                     </div>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="pro_details.html"><img src="images/pro4.png" alt=""></a>
                     <div>
                         <h4><a href="pro_details.html">3l双胆智能预约电高压锅正品</a></h4>
@@ -257,10 +257,10 @@
                         <p class="market_price">￥ 市场价：<span>399.00</span></p>
                         <p class="member_price">￥ 会员价：<span>299.00</span></p>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
-        <div class="hot_goods">
+        <!-- <div class="hot_goods">
             <h3><a href="shop_list.html">热门商品</a></h3>
             <ul>
                 <li>
@@ -523,7 +523,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div> -->
 
     </div>
     <div id="footer">
@@ -604,7 +604,7 @@
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/public.js?v=1"></script>
-    <script src="js/index.js?v=1"></script>
+    <script src="js/index.js?v=2"></script>
 </body>
 
 </html>
